--- a/.env
+++ b/.env
@@ -16,5 +16,15 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=70289d52cc4d8cc5dc853d4e9773a839
+APP_SECRET=7bdd479b25c438b7573efd295fde26c9
 ###< symfony/framework-bundle ###
+DATABASE_URL="mysql://homework:homework@db:3306/homework?serverVersion=8.0"
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data_%kernel.environment%.db"
+# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
+# DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
+###< doctrine/doctrine-bundle ###
