--- a/config/services.yaml
+++ b/config/services.yaml
@@ -6,13 +6,13 @@
 parameters:
 
 services:
-    # default configuration for services in *this* file
-    _defaults:
-        autowire: true      # Automatically injects dependencies in your services.
-        autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+    App\Service\Processor\ParsePriceService: ~
 
-    # makes classes in src/ available to be used as services
-    # this creates a service per class whose id is the fully-qualified class name
+    _defaults:
+        autowire: true
+        autoconfigure: true
+
+    # Standard autowiring for the rest of your app
     App\:
         resource: '../src/'
         exclude:
@@ -20,5 +20,3 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
 
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
